style.css
/* Dark Mode Variables */
:root {
  --accent-color1: #fa4032;
  --accent-color2: #fa812f;
  --accent-color3: #fab12f;
  --accent-color4: #fef3e2;
  --primary-bg-color: #121212;
  --primary-bg-color-opaque1: #121212cc;
  --primary-bg-color-opaque2: #12121240;
  --secondary-bg-color: #212121;
  --secondary-bg-color-opaque1: #212121cc;
  --secondary-bg-color-opaque2: #21212140;
  --tertiary-bg-color: #444444;
  --tertiary-bg-color-opaque1: #444444cc;
  --tertiary-bg-color-opaque2: #44444440;
  --text-color: #eeeeee;
  --shadows: #00000040;
  --highlights: #fbf7f580;
}

/* Light Mode Variables */
@media (prefers-color-scheme: light) {
  :root {
    --accent-color1: #fa4032;
    --accent-color2: #fa812f;
    --accent-color3: #fab12f;
    --accent-color4: #fef3e2;
    --primary-bg-color: #fbf7f5;
    --primary-bg-color-opaque1: #fbf7f5cc;
    --primary-bg-color-opaque2: #fbf7f540;
    --secondary-bg-color: #f0f0f0;
    --secondary-bg-color-opaque1: #f0f0f0cc;
    --secondary-bg-color-opaque2: #f0f0f040;
    --text-color: #333333;
    --shadows: #cccccc40;
    --highlights: #00000080;
  }
}

/* Import Google Fonts */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

/* Local Font Fallbacks */
@font-face {
  font-family: "Montserrat";
  src: url("/ttf/Montserrat-VariableFont_wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Montserrat";
  src: url("/ttf/Montserrat-Italic-VariableFont_wght.ttf") format("truetype");
  font-weight: 100 900;
  font-style: italic;
  font-display: swap;
}

body {
  margin: 0px 0px 15px 0px;
  background-color: var(--accent-color1);
  font-family: Montserrat, sans-serif;
  font-optical-sizing: auto;
  font-size: 12pt;
}
h1 {
  text-align: center;
  color: var(--text-color);
  font-weight: 600;
}

h2 {
  color: var(--text-color);
  font-weight: 600;
}

p a {
  color: var(--text-color);
  font-weight: 400;
}
a,
a:link,
a:visited,
a:hover,
a:active {
  color: var(--text-color);
  text-decoration: underline;
}

/* Navigation Bar */
.navbar {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--text-color);
  text-align: center;
  overflow: hidden;
  position: fixed;
  bottom: 0;
  width: 100%;
  border-radius: 25px 25px 0px 0px;
  background-color: var(--secondary-bg-color-opaque1);
  box-shadow: 0 4px 30px var(--shadows);
  backdrop-filter: blur(5px);
  border: 1px solid var(--primary-bg-color-opaque2);
  z-index: 1000;
}

.navbar a {
  width: 100%;
  float: right;
  display: block;
  color: var(--text-color);
  text-align: center;
  padding: 15px;
  text-decoration: none;
  font-size: 17px;
  position: relative;
  overflow: hidden;
}

.navbar a::before {
  content: "";
  position: absolute;
  bottom: -100%;
  left: 0;
  width: 100%;
  height: 100%;
  color: var(--primary-bg-color);
  background: var(--highlights);
  backdrop-filter: brightness(10) opacity(0.5);
  transition: bottom 0.1s ease-in-out;
  pointer-events: none;
}

@media (prefers-color-scheme: light) {
  .navbar a::before {
    backdrop-filter: brightness(0) opacity(0.5);
  }
}

.navbar a:hover {
  color: var(--primary-bg-color);
}

.navbar a:hover::before {
  bottom: 0;
}

.navbar a span {
  color: var(--text-color);
  position: relative;
}

.navbar a:hover span {
  color: var(--primary-bg-color);
  font-weight: 700;
}

/* Logo */
.logo {
  float: left;
  width: 50px;
  height: auto;
  display: block;
  position: fixed;
  top: 25px;
  left: 25px;
  z-index: 10;
}

.logo img {
  display: none;
  width: 100%;
  height: auto;
}

/* Content */
.content {
  margin: 20px 20px 20px 20px;
  border-radius: 25px 25px 25px 25px;
  border-style: solid;
  border-color: #33ff00; /* Dev outline */
}

